--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
-
+<link rel="stylesheet" href="{{ url_for('static', filename='local.css') }}"  type="text/css" />
 {% block body %}
 
-<h1>Hello World</h1>
-
+<h1>Procrastination and Productivity</h1>
+<img class="picture" src = "/static/Capstone_purpose_slide.png" style="width:700px;height:500px">
 {% endblock %}
