--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -20,9 +20,12 @@
 
     <h1 class="display-5">{{post.subject}}</h1>
     <p class="fs-3 text-break">
-        <img width="120" class="img-thumbnail float-start me-2" src="data:image;base64,{{base64encode(post.author.image.read())}}">
+        {% if post.author.image%}
+            <img width="120" class="img-thumbnail float-start me-2" src="data:image;base64,{{base64encode(post.author.image.read())}}">
+        {% endif %}
         {{post.content}}
     </p>
+    <h1 class="display-5">Your rating: {{post.rating}}</h1>
     <a href="/comment/new/{{post.id}}" class="btn btn-primary btn-sm" role="button">New Comment</a>
 
     <div class="ms-5">
@@ -38,6 +41,7 @@
             modified {{moment(comment.modifydate).calendar()}}
         {% endif %}
         <br>
+        <p>HI</p>
         <p class="fs-3">
             {{comment.content}}
         </p>
