--- a/app/templates/postform.html
+++ b/app/templates/postform.html
@@ -22,6 +22,14 @@
                 {% endfor %}
             </p>
             <p>
+                {{ form.rating.label }} <br>
+                {{ form.rating() }}
+                <!--List the errors for this field-->
+                {% for error in form.rating.errors %}
+                    <span style="color: red;">[{{ error }}]</span>
+                {% endfor %}
+            </p>
+            <p>
                 {{form.submit()}}
             </p>
         </form>
