--- a/app/templates/posts.html
+++ b/app/templates/posts.html
@@ -35,6 +35,12 @@
                 {% endif %}
                 {{post.subject}}
             </div>
+            <div class="col">
+                {% if loop.index == 1 %}
+                    <h3 class="display-5">Rating</h3>
+                {% endif %}
+                {{post.rating}}
+            </div>
         </div>
     {% endfor %}
 {% else %}
