--- a/app/templates/profilemy.html
+++ b/app/templates/profilemy.html
@@ -23,7 +23,9 @@
         {% endif %}
         
         Username: {{current_user.username}} <br>
-        Email: {{current_user.email}}
+        Email: {{current_user.email}} <br>
+        Role: {{current_user.role}} <br>
+        Mascot: {{current_user.mascot}} <br>
     </div>
 </div>
 <br>
