--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,5 +3,21 @@
 {% block body %}
 
 <h1>Procrastination and Productivity</h1>
-<img class="picture" src = "/static/Capstone_purpose_slide.png" style="width:700px;height:500px">
+<br><br>
+<div class="container">
+    <div class="row">
+      <div class="row">
+        <h3>This is the homepage of the procrastination app. Feel free to explore the navbar</h3>
+      </div>
+      <div class="row">
+        <img class="picture" src = "/static/Capstone_purpose_slide.png" style="width:700px;height:500px">
+      </div>
+      <div class="row">
+        Column
+      </div>
+    </div>
+  </div>
+  <br><br>
+  <br><br>
+  <h1>Space</h1>
 {% endblock %}
