--- a/app/templates/includes/_navbar.html
+++ b/app/templates/includes/_navbar.html
@@ -19,6 +19,7 @@
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Store</a></li>
             <li><a class="dropdown-item" href="aboutus">About Us</a></li>
+            <li><a class="dropdown-item" href="entries">Entries</a></li>
           </ul>
         </li>
       </ul>
