--- a/app/templates/entry.html
+++ b/app/templates/entry.html
@@ -3,5 +3,33 @@
 {% extends 'base.html' %}
 
 {% block body %}
+<p>This will show a singular entry</p>
+
+{% if entry %}
+
+{{moment(entry.createdate).calendar()}} by {{entry.author.username}} 
+{% if entry.modifydate %}
+    modified {{moment(entry.modifydate).calendar()}}
+{% endif %}
+<br>
+    {% if entry.author == current_user %}
+        <a data-toggle="tooltip" data-placement="top" title="Delete entry" href="/entries/delete/{{entry.id}}">
+            <img width="40" class="bottom-image" src="/static/delete.png">
+        </a>
+        <a data-toggle="tooltip" data-placement="top" title="Edit entry" href="/entry/edit/{{entry.id}}">
+            <img width="40" class="bottom-image" src="/static/edit.png">
+        </a>
+    {% endif %}
+
+    <h1 class="display-5">{{entry.completed}}</h1>
+    <p class="fs-3 text-break">
+        {% if entry.author.image%}
+            <img width="120" class="img-thumbnail float-start me-2" src="data:image;base64,{{base64encode(entry.author.image.read())}}">
+        {% endif %}
+        {{entry.reflection}}
+    </p>
+    
+    
+{% endif %}
 
 {% endblock %}
