--- a/app/templates/includes/_navbar.html
+++ b/app/templates/includes/_navbar.html
@@ -18,7 +18,7 @@
             <li><a class="dropdown-item" href="#">Forest</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Store</a></li>
-            <li><a class="dropdown-item" href="aboutus">About Us</a></li>
+            <li><a class="dropdown-item" href="/aboutus">About Us</a></li>
             <li><a class="dropdown-item" href='/entries/all'>Entries</a></li>
           </ul>
         </li>
