--- a/app/templates/timerform.html
+++ b/app/templates/timerform.html
@@ -5,7 +5,7 @@
 {% block body %}
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"  type="text/css" />
 <div class="timer">
-    
+    <p>Hi thisis me </p>
 
 </div>
 
