--- a/app/templates/timerform.html
+++ b/app/templates/timerform.html
@@ -8,7 +8,9 @@
     <p>Hi thisis me </p>
 
 </div>
-<script  src="{{ url_for('static',filename='script.js') }}" type="module"></script>
+<script  src="{{ url_for('static',filename='script.js') }}" type="module">
+    
+</script>
 
  
 {% endblock %}
