--- a/app/templates/timerform.html
+++ b/app/templates/timerform.html
@@ -4,12 +4,15 @@
 
 {% block body %}
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"  type="text/css" />
+<div class timerWhole>
 <div class="timer">
     <p>Hi thisis me </p>
 
 </div>
+
+</div>
 <script  src="{{ url_for('static',filename='script.js') }}" type="module">
-    
+
 </script>
 
  
