--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,17 +7,32 @@
 <div class="container">
     <div class="row">
       <div class="row">
-        <h3>This is the homepage of the procrastination app. Feel free to explore the navbar</h3>
+        <div class="wordPic">
+        <h6>
+          Have you ever pushed back doing a very <strong>important</strong> task.
+        </h6>
+        <img src="/static/me.jpg" class="picture">
+        </div>  
+        
+        <div class="wordPic">
+        <h6>  
+        My goal is to encourage producitvity with this website.
+        </h6>
+        <img src="/static/me.jpg" class="picture">
+        </div>
+        <!-- <img class="picture" src = "/static/Capstone_purpose_slide.png" style="width:700px;height:500px">
       </div>
-      <div class="row">
-        <img class="picture" src = "/static/Capstone_purpose_slide.png" style="width:700px;height:500px">
-      </div>
-      <div class="row">
-        Column
+      <div class="row"> -->
+        
       </div>
     </div>
-  </div>
-  <br><br>
-  <br><br>
-  <h1>Space</h1>
+  <h1>Guide to use website</h1>
+  <ol>
+    <li>Go to "Timer" and set the amount of timer you want to be productive</li>
+    <li>During the duration of the timer, you will be focused on on being productive while your tree grows.</li>
+    <li>After the timer rings, you can journal your working experience</li>
+
+
+  </ol>
+</div>
 {% endblock %}
