--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,7 +9,7 @@
       <div class="row">
         <div class="wordPic">
         <h6>
-          Have you ever pushed back doing a very <strong>important</strong> task.
+          Have you ever procrastinated on doing an <strong>important</strong> task.
         </h6>
         <img src="/static/me.jpg" class="picture">
         </div>  
