--- a/app/static/local.css
+++ b/app/static/local.css
@@ -1,5 +1,6 @@
 h1 {
     text-align:center;
+    font-family: 'Merriweather', serif;
 }
 
 .bottom-image img{
@@ -26,4 +27,8 @@ background: radial-gradient(circle, rgba(176,187,241,1) 0%, rgba(222,132,150,1) 
 .navbar{
     background: rgb(176,187,241);
 background: linear-gradient(90deg, rgba(176,187,241,1) 0%, rgba(203,181,125,1) 100%);    
+}
+
+h6{
+    font-family: 'Libre Franklin', sans-serif;
 }
