--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,6 +15,10 @@ like the navbar. -->
     
     <link rel="shortcut icon" href="{{ url_for('static', filename='clockIcon.jpg') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='local.css') }}"  type="text/css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap" rel="stylesheet">
     <!--Bootstrap links go here-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">    
     <!--This is some javascript tools for displaying date and time that doesn't work right now
