--- a/app/templates/aboutus.html
+++ b/app/templates/aboutus.html
@@ -5,7 +5,7 @@
 {% block body %}
 <h1>About Us </h1>
 <br><br>
-<img src ="/static/me.jpg" height=250px width=250px>
+<img src ="/static/me.jpg" class="picture">
 
 <h3>Hi, my name is Scott and this is my project</h3>
 <br><br>
