--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
-<link rel="stylesheet" href="{{ url_for('static', filename='local.css') }}"  type="text/css" />
+
 {% block body %}
+<link rel="stylesheet" href="{{ url_for('static', filename='local.css') }}"  type="text/css" />
 
 <h1>Procrastination and Productivity</h1>
 <br><br>
@@ -11,14 +12,14 @@
         <h6>
           Have you ever procrastinated on doing an <strong>important</strong> task.
         </h6>
-        <img src="/static/me.jpg" class="picture">
+        <img class="picture" src="/static/procrastination.jpg" >
         </div>  
         
         <div class="wordPic">
         <h6>  
         My goal is to encourage producitvity with this website.
         </h6>
-        <img src="/static/me.jpg" class="picture">
+        <img src="/static/productivity.png" class="picture">
         </div>
         <!-- <img class="picture" src = "/static/Capstone_purpose_slide.png" style="width:700px;height:500px">
       </div>
