--- a/app/templates/explanation.html
+++ b/app/templates/explanation.html
@@ -2,8 +2,32 @@
 
 {% block body %}
 <h1>What is procrastination?</h1>
-<h6 class="explainText">Procrastination is the act of delaying or postponing something.</h6>
 <br>
-<h6>The Temporal  </h6>
+<br>
+<div class="wordPic">
+<h6 class="wordPic">Procrastination is the act of delaying or postponing something.</h6>
+<img class="picture" src="/static/procrastinationLater.jpg">
+</div>
+<br>
+<div class="wordPic">
+<h3>To find the solution to procrastination, we must first look for the root cause.</h3>
+</div>
+<br>
+<div class="wordPic">
+<h6>The <strong>Temporal Motivation Theory</strong> is a theory developed by Piers Steel and Cornelius J. König which encapsulates the 4 main root causes of procrastination.</h6>
+</div>
+<ul>
+    <li>Self-efficacy</li>
+    <li>Value of task</li>
+    <li>Distractibility</li>
+    <li>Delay of task</li>
+
+</ul>
+<br>
+<div>
+<h6>Self-efficacy: People with more self-efficacy believe they can perform the task, making them have greater expectations of success. On the other hand, those with low self-efficacy don’t have much confidence they can perform the task successfully This makes them lower their expectations of success; self-efficacy has a negative relationship with procrastination.
+</h6>
+<img class="picture" src="/static/self-efficacy.png">
+</div>
 {% endblock %}
     
