--- a/app/static/local.css
+++ b/app/static/local.css
@@ -24,6 +24,10 @@ h1 {
     justify-content:space-around;
 }
 
+.picTopWord{
+    text-align:center;
+}
+
 body{
     background: rgb(176,187,241);
 background: radial-gradient(circle, rgba(176,187,241,1) 0%, rgba(222,132,150,1) 100%);    
@@ -33,6 +37,6 @@ background: radial-gradient(circle, rgba(176,187,241,1) 0%, rgba(222,132,150,1) 
 background: linear-gradient(90deg, rgba(176,187,241,1) 0%, rgba(203,181,125,1) 100%);    
 }
 
-h6{
+h6, h3{
     font-family: 'Libre Franklin', sans-serif;
 }
