--- a/app/templates/aboutus.html
+++ b/app/templates/aboutus.html
@@ -7,10 +7,10 @@
 <br><br>
 <img src ="/static/me.jpg" class="picture">
 
-<h3>Hi, my name is Scott and this is my project</h3>
-<br><br>
+<h3>Hi, my name is Scott and my Capstone project is on Procrastination and how to be productive.</h3>
+<br>
 <h2>Intended purpose</h2>
-<p>The intended purpose of my Procrastination app is to build a healthy habbits of </p>
+<p>The intended purpose of my Procrastination app is to help people recognize the root causes of procrastination and build healthy productivity habits along the way.</p>
 <br><br>
 <h2>Interactivity description</h2>
 <p> Brandon is a 14 year-old who constantly gets distracted by youtube videos and can't complete his work on time. He wants to procrastinate less and get his work done in a timely manner. When he first starts the web app, he will answer a set of questions that will determine his issues and appropriate/effective solutions. The app will adjust the amount of rewards given and the difficulty of objectives take make the most sense to Brandon. 
