--- a/app/templates/explanation.html
+++ b/app/templates/explanation.html
@@ -25,9 +25,24 @@
 </ul>
 <br>
 <div>
-<h6>Self-efficacy: People with more self-efficacy believe they can perform the task, making them have greater expectations of success. On the other hand, those with low self-efficacy don’t have much confidence they can perform the task successfully This makes them lower their expectations of success; self-efficacy has a negative relationship with procrastination.
+<h6><strong>Self-efficacy</strong>: People with more self-efficacy believe they can perform the task, making them have greater expectations of success. On the other hand, those with low self-efficacy don’t have much confidence they can perform the task successfully This makes them lower their expectations of success; self-efficacy has a negative relationship with procrastination.
 </h6>
-<img class="picture" src="/static/self-efficacy.png">
+<img class="TopWord picture" src="/static/self-efficacy.png">
+</div>
+
+<div>
+<h6><strong>Value of task</strong>: It is made up of three subsections, task aversiveness (people avoiding unpleasant tasks), need for achievement, and boredom proneness(likelihood of tasks found boring increases). </h6>
+<img class="TopWord picture" src="/static/value.png">
+</div>
+
+<div>
+<h6><strong>Distractibility</strong>: Distractions will make people prone to setting off tasks and adding delay to the completion of tasks.</h6>
+<img class="TopWord picture" src="/static/distractibility.jpg">
+</div>
+
+<div>
+<h6><strong>Delay of task</strong>: Delay of task involves the timing of rewards and punishments, organization, and intention-action gap.</h6>
+<img class="TopWord picture" src="/static/delay.png">
 </div>
 {% endblock %}
     
