--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -21,17 +21,15 @@
         </h6>
         <img src="/static/productivity.png" class="picture">
         </div>
-        <!-- <img class="picture" src = "/static/Capstone_purpose_slide.png" style="width:700px;height:500px">
-      </div>
-      <div class="row"> -->
         
       </div>
     </div>
   <h1>Guide to use website</h1>
-  <ol>
+  <ol class="listOfInstruc">
+    <li>Explore the "Explaination" page to learn the root causes behind procrastination</li>
     <li>Go to "Timer" and set the amount of timer you want to be productive</li>
     <li>During the duration of the timer, you will be focused on on being productive while your tree grows.</li>
-    <li>After the timer rings, you can journal your working experience</li>
+    <li>After the timer rings, go to the "Journal" page and record what you've completed and how you feel.</li>
 
 
   </ol>
